Adding test skeleton for dogm163

--- a/project/source/unit-tests/CMakeLists.txt
+++ b/project/source/unit-tests/CMakeLists.txt
@@ -2,6 +2,7 @@ project(unit-tests)
 
 add_executable(unit-tests
   display.cc
+  dogm163.cc
   )
 add_executable(test::unit-tests ALIAS unit-tests)
 
