--- a/project/source/application/CMakeLists.txt
+++ b/project/source/application/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(application
   application.cc
   display.cc
   dogm163.cc
+  gpio.cc
+  spi.cc
   )
 add_library(app::application ALIAS application)
 
